<resources>
    <string name="app_name">RasQ</string>
    <string name="settingsBtnTxt">Configuracion</string>
    <string name="paymentBtnTxt">Pagos</string>
    <string name="messagesBtnTxt">Mensajes</string>
    <string name="phoneNumLblTxt">Telefono Celular:</string>
    <string name="verificationStatusLblTxt">Estado Cuenta:</string>
    <string name="initVerificationStatusTxt">Verificado</string>
    <string name="addressLblTxt">Direccion:</string>
    <string name="logoutBtnTxt">Cerrar Sesion</string>
    <string name="welcomeTxt">Inicio de Sesion</string>
    <string name="loginTxt">Credenciales:</string>
    <string name="emailHintTxt">Correo Electronico</string>
    <string name="passwordHintTxt">Contraseña</string>
    <string name="loginBtnTxt">Iniciar Sesion</string>
    <string name="signupTxt"><u>Registrate</u></string>
    <string name="nameHintTxt">Nombre Completo</string>
    <string name="phoneHintTxt">Telefono Celular</string>
    <string name="addressHintTxt">Direccion</string>
    <string name="signupBtnTxt">Crear Cuenta</string>
    <string name="signup_welcometxt">Ingresa tus datos:</string>
    <string name="confirmPasswordHintTxt">Confirma tu Contraseña</string>
    <string name="homeMenuTxt">Menu Principal</string>
    <string name="newEventMenuTxt">Crear Evento</string>
    <string name="quoteServiceMenuTxt">Cotizar</string>
    <string name="Profile_btn_description">Boton al Perfil</string>
    <string name="NewsletterTitleTxt">Notificaciones</string>
    <string name="initQuoteFrameTxt">Cotizaciones</string>
    <string name="init_request_event_txt">Solicitar Servicio</string>
    <string name="Capture_btn_description">Boton de Captura</string>
    <string name="new_address_hint_txt">Nueva Direccion</string>
    <string name="update_info_btn_txt">Actualizar</string>
    <string name="event_request_lbl_txt">Peticiones de Eventos:</string>
    <string name="new_event_request_title_txt">Nueva Peticion de Evento</string>
    <string name="event_address_hint_txt">Direccion del Evento</string>
    <string name="event_description_hint_txt">Descripcion del Evento</string>
    <string name="create_request_btn_txt">Crear Peticion</string>
    <string name="title_init_txt">Titulo</string>
    <string name="description_lbl_txt">Descripcion:</string>
    <string name="bids_lbl_txt">Ofertas:</string>
    <string name="time_date_lbl_txt">Fecha / Hora:</string>
    <string name="requestor_email_lbl_txt">Email Solicitante:</string>
    <string name="new_bid_btn_descrption_txt">crear nueva oferta</string>
    <string name="insert_new_offer_title_txt">Ingresa tu oferta</string>
    <string name="price_hint_txt">Cuanto Cobras (COP)</string>
    <string name="new_offer_btn_txt">Hacer Oferta</string>
    <string name="events_lbl_txt">Eventos:</string>
    <string name="accepted_offer_txt">Oferta Aceptada:</string>
    <string name="view_real_time_location_btn_desc">View real time location</string>
</resources>