<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/rasq_logo_name"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/txtNewEventRequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/welcomeTxt"
            android:textAlignment="center"
            android:textColor="@color/rasq_dark_purple"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/loginTxt"
            android:textAlignment="center"
            android:textColor="@color/rasq_dark_purple"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_btnbox"
            android:orientation="vertical"
            android:padding="15dp">

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_bg"
                android:hint="@string/emailHintTxt"
                android:padding="16dp"
                android:textColor="@color/rasq_dark_purple"
                android:textSize="16sp"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/edittext_bg"
                android:hint="@string/passwordHintTxt"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColor="@color/rasq_dark_purple"
                android:textSize="16sp"
                android:autofillHints="password" />
        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/background_longbtn"
            android:text="@string/loginBtnTxt"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/signupTxt"
            android:textColor="@color/rasq_dark_purple"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>