<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/rasq_lightest_purple"
        android:orientation="vertical"
        android:padding="32dp">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/rasq_logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="16dp"
            android:text="@string/insert_new_offer_title_txt"
            android:textAlignment="center"
            android:textColor="@color/rasq_dark_purple"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_btnbox"
            android:orientation="vertical"
            android:padding="15dp">

            <EditText
                android:id="@+id/editPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@drawable/edittext_bg"
                android:hint="@string/price_hint_txt"
                android:importantForAutofill="no"
                android:inputType="number"
                android:padding="16dp"
                android:textColor="@color/rasq_dark_purple"
                android:textSize="16sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnBid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/background_longbtn"
            android:text="@string/new_offer_btn_txt"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>