<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".controllers.ViewEventRequestActivity">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/rasq_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/txtRequestTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_init_txt"
            android:textAlignment="center"
            android:textColor="@color/rasq_dark_purple"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgLogo" />


        <LinearLayout
            android:id="@+id/linearLayoutRequestData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/background_btnbox"
            android:elevation="3dp"
            android:orientation="vertical"
            android:paddingTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtRequestTitle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/requestor_email_lbl_txt"
                    android:textColor="@color/rasq_dark_purple"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/editTxtRequestorEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/rasq_alt_light_gray"
                    android:textSize="16sp"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/rasq_light_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/time_date_lbl_txt"
                    android:textColor="@color/rasq_dark_purple"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/editTxtTimeDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/rasq_alt_light_gray"
                    android:textSize="16sp"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/rasq_light_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/addressLblTxt"
                    android:textColor="@color/rasq_dark_purple"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/editTxtAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/rasq_alt_light_gray"
                    android:textSize="16sp"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/rasq_light_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/description_lbl_txt"
                    android:textColor="@color/rasq_dark_purple"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/editTxtDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:lines="5"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/rasq_alt_light_gray"
                    android:textSize="16sp"
                    tools:ignore="TextContrastCheck" />

                <View
                    android:id="@+id/view4"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/rasq_light_gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bids_lbl_txt"
                    android:textColor="@color/rasq_dark_purple"
                    android:textSize="18sp" />

                <ListView
                    android:id="@+id/bid_list"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:visibility="visible" />

                <ImageButton
                    android:id="@+id/btn_new_bid"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/round_button"
                    android:contentDescription="@string/new_bid_btn_descrption_txt"
                    android:padding="12dp"
                    android:src="@android:drawable/ic_menu_add" />

            </LinearLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>